add frontend, get story, story detail, create QA, story
